@startuml

title __CALCROC's Class Diagram__\n



      class com.example.calc.HelloApplication {
      }


  



      class com.example.calc.HelloController {
      }







        interface com.example.calc.dao.MatrixDao {
        }



  




        class com.example.calc.dao.MatrixDaoImpl {
        }



  




        class com.example.calc.dao.ResultDaoImpl {
        }



  




        class com.example.calc.db.ConnectionDB {
        }



  




        class com.example.calc.db.TaskDAOImpl {
        }



  




        class com.example.calc.math.Calculator {
        }



  




        interface com.example.calc.math.MathCalc {
        }



  




        class com.example.calc.model.Matrix {
        }



  




        class com.example.calc.model.Result {
        }



  

  com.example.calc.HelloApplication -up-|> javafx.application.Application
  com.example.calc.HelloController .up.|> javafx.fxml.Initializable
  com.example.calc.HelloController o-- com.example.calc.math.MathCalc : mathCalc
  com.example.calc.HelloController o-- com.example.calc.dao.MatrixDao : matrixDao
  com.example.calc.dao.MatrixDaoImpl .up.|> com.example.calc.dao.MatrixDao
  com.example.calc.dao.MatrixDaoImpl o-- com.example.calc.db.ConnectionDB : connectionDB
  com.example.calc.dao.ResultDaoImpl o-- com.example.calc.db.ConnectionDB : connectionDB
  com.example.calc.math.Calculator .up.|> com.example.calc.math.MathCalc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
